syntax = "proto3";

option go_package = "pb/gen";

package ukama.lookup.v1;

import "validator.proto";
import "google/protobuf/any.proto";

service MsgBus {

    rpc Initialize(InitRequest) returns (InitResponse);
    
    rpc PusblishMsg(PublishMsgRequest) returns (PublishMsgResponse);

}


message InitRequest {
    string systemName = 1 [(validator.field) = {string_not_empty: true}];
    string serviceName = 2 [(validator.field) = {string_not_empty: true}];
    string msgBusURI = 3 [(validator.field) = {string_not_empty: true}];
    string instanceId = 4  [(validator.field) = {string_not_empty: true}];
    string serviceURI = 5;
    string queueName = 6;
    string exchange = 7;
    uint16 grpcTimeout =8; 
    repeated string routes = 5 ;
}

message InitResponse {

}

message PublishMsgRequest {
    string routingKey = 1 [(validator.field) = {string_not_empty: true}];
    google.protobuf.Any msg = 2;
}

message PublishMsgResponse {

}